testdata/baselines/reference/submodule/compiler/unusedTypeParameterInLambda3.errors.txt
unusedTypeParameterInLambda3.ts(5,15): error TS6196: 'U' is declared but never used.


==== unusedTypeParameterInLambda3.ts (1 errors) ====
    class A<T> {
        public x: T;
    }
    
    var y: new <T,U>(a:T)=>void;
                  ~
!!! error TS6196: 'U' is declared but never used.
    